java_compiler/mini_java.output
Terminals which are not used

   INVALID_ID
   COLON
   BRACKET_OPEN
   BRACKET_CLOSE
   FINAL_KEYWORD
   ABSTRACT_KEYWORD


State 57 conflicts: 1 shift/reduce
State 96 conflicts: 1 shift/reduce
State 127 conflicts: 8 shift/reduce
State 132 conflicts: 1 shift/reduce
State 139 conflicts: 8 shift/reduce
State 140 conflicts: 8 shift/reduce
State 141 conflicts: 8 shift/reduce
State 142 conflicts: 8 shift/reduce
State 143 conflicts: 8 shift/reduce
State 144 conflicts: 8 shift/reduce
State 169 conflicts: 1 shift/reduce


Grammar

    0 $accept: programme $end

    1 programme: class_list

    2 class_list: class_list class
    3           | class

    4 class: CLASS_KEYWORD ID CURLY_OPEN CURLY_CLOSE
    5      | CLASS_KEYWORD ID CURLY_OPEN class_body CURLY_CLOSE
    6      | error ID CURLY_OPEN class_body CURLY_CLOSE
    7      | CLASS_KEYWORD error CURLY_OPEN class_body CURLY_CLOSE
    8      | CLASS_KEYWORD ID error class_body CURLY_CLOSE
    9      | CLASS_KEYWORD ID CURLY_OPEN class_body error
   10      | CLASS_KEYWORD ID EXTENDS_KEYWORD ID CURLY_OPEN class_body CURLY_CLOSE
   11      | CLASS_KEYWORD ID IMPLEMENTS_KEYWORD id_list CURLY_OPEN class_body CURLY_CLOSE
   12      | CLASS_KEYWORD ID EXTENDS_KEYWORD ID IMPLEMENTS_KEYWORD id_list CURLY_OPEN class_body CURLY_CLOSE

   13 class_body: class_body class_member
   14           | class_member

   15 class_member: field_declaration
   16             | method_declaration

   17 field_declaration: access_modifier type id_list SEMICOLON
   18                  | access_modifier STATIC_KEYWORD type id_list SEMICOLON
   19                  | access_modifier type ID AFF expression SEMICOLON
   20                  | access_modifier STATIC_KEYWORD type ID AFF expression SEMICOLON

   21 id_list: ID
   22        | id_list COMMA ID

   23 access_modifier: PUBLIC_KEYWORD
   24                | PRIVATE_KEYWORD
   25                | PROTECTED_KEYWORD
   26                | /* empty */

   27 type: INT_TYPE
   28     | FLOAT_TYPE
   29     | BOOLEAN_TYPE
   30     | CHAR_TYPE
   31     | STRING_TYPE
   32     | VOID_TYPE
   33     | ID

   34 method_declaration: method_signature CURLY_OPEN method_body CURLY_CLOSE

   35 method_signature: access_modifier type ID PAREN_OPEN parameter_list PAREN_CLOSE
   36                 | access_modifier STATIC_KEYWORD type ID PAREN_OPEN parameter_list PAREN_CLOSE
   37                 | access_modifier type ID PAREN_OPEN PAREN_CLOSE
   38                 | access_modifier STATIC_KEYWORD type ID PAREN_OPEN PAREN_CLOSE

   39 parameter_list: parameter
   40               | parameter_list COMMA parameter

   41 parameter: type ID

   42 method_body: statement_list

   43 statement_list: statement_list statement
   44               | statement

   45 statement: block
   46          | if_statement
   47          | while_statement
   48          | for_statement
   49          | return_statement
   50          | expression_statement
   51          | local_variable_declaration
   52          | assignment_statement

   53 assignment_statement: ID AFF expression SEMICOLON

   54 block: CURLY_OPEN statement_list CURLY_CLOSE

   55 if_statement: IF_KEYWORD PAREN_OPEN expression PAREN_CLOSE statement
   56             | IF_KEYWORD PAREN_OPEN expression PAREN_CLOSE statement ELSE_KEYWORD statement

   57 while_statement: WHILE_KEYWORD PAREN_OPEN expression PAREN_CLOSE statement

   58 for_statement: FOR_KEYWORD PAREN_OPEN for_init_statement SEMICOLON expression SEMICOLON for_update_statement PAREN_CLOSE statement

   59 for_init_statement: local_variable_declaration
   60                   | expression_statement

   61 for_update_statement: expression_statement

   62 return_statement: RETURN_KEYWORD SEMICOLON
   63                 | RETURN_KEYWORD expression SEMICOLON

   64 expression: expression OP_ADD expression
   65           | expression OP_SUBTRACT expression
   66           | expression OP_MULTIPLY expression
   67           | expression OP_DIVIDE expression
   68           | expression OP_MODULO expression
   69           | expression OP_REL expression
   70           | ID DOT expression
   71           | expression DOT ID PAREN_OPEN PAREN_CLOSE
   72           | expression PAREN_OPEN argument_list PAREN_CLOSE
   73           | expression PAREN_OPEN PAREN_CLOSE
   74           | PAREN_OPEN expression PAREN_CLOSE
   75           | INT_LITERAL
   76           | FLOAT_LITERAL
   77           | BOOLEAN_LITERAL
   78           | CHAR_LITERAL
   79           | STRING_LITERAL
   80           | THIS_KEYWORD
   81           | ID
   82           | error

   83 argument_list: expression
   84              | argument_list COMMA expression

   85 expression_statement: SEMICOLON
   86                     | expression SEMICOLON

   87 local_variable_declaration: type ID SEMICOLON
   88                           | type ID AFF expression SEMICOLON


Terminals, with rules where they appear

$end (0) 0
error (256) 6 7 8 9 82
ID (258) 4 5 6 8 9 10 11 12 19 20 21 22 33 35 36 37 38 41 53 70 71
    81 87 88
INVALID_ID (259)
OP_MULTIPLY (260) 66
OP_DIVIDE (261) 67
OP_ADD (262) 64
OP_SUBTRACT (263) 65
OP_MODULO (264) 68
OP_REL (265) 69
AFF (266) 19 20 53 88
CURLY_OPEN (267) 4 5 6 7 9 10 11 12 34 54
CURLY_CLOSE (268) 4 5 6 7 8 10 11 12 34 54
PAREN_OPEN (269) 35 36 37 38 55 56 57 58 71 72 73 74
PAREN_CLOSE (270) 35 36 37 38 55 56 57 58 71 72 73 74
SEMICOLON (271) 17 18 19 20 53 58 62 63 85 86 87 88
COMMA (272) 22 40 84
DOT (273) 70 71
COLON (274)
BRACKET_OPEN (275)
BRACKET_CLOSE (276)
INT_LITERAL (277) 75
FLOAT_LITERAL (278) 76
BOOLEAN_LITERAL (279) 77
CHAR_LITERAL (280) 78
STRING_LITERAL (281) 79
INT_TYPE (282) 27
FLOAT_TYPE (283) 28
BOOLEAN_TYPE (284) 29
CHAR_TYPE (285) 30
STRING_TYPE (286) 31
VOID_TYPE (287) 32
THIS_KEYWORD (288) 80
PUBLIC_KEYWORD (289) 23
PRIVATE_KEYWORD (290) 24
PROTECTED_KEYWORD (291) 25
STATIC_KEYWORD (292) 18 20 36 38
FINAL_KEYWORD (293)
ABSTRACT_KEYWORD (294)
CLASS_KEYWORD (295) 4 5 7 8 9 10 11 12
IF_KEYWORD (296) 55 56
ELSE_KEYWORD (297) 56
WHILE_KEYWORD (298) 57
FOR_KEYWORD (299) 58
RETURN_KEYWORD (300) 62 63
EXTENDS_KEYWORD (301) 10 12
IMPLEMENTS_KEYWORD (302) 11 12


Nonterminals, with rules where they appear

$accept (48)
    on left: 0
programme (49)
    on left: 1, on right: 0
class_list (50)
    on left: 2 3, on right: 1 2
class (51)
    on left: 4 5 6 7 8 9 10 11 12, on right: 2 3
class_body (52)
    on left: 13 14, on right: 5 6 7 8 9 10 11 12 13
class_member (53)
    on left: 15 16, on right: 13 14
field_declaration (54)
    on left: 17 18 19 20, on right: 15
id_list (55)
    on left: 21 22, on right: 11 12 17 18 22
access_modifier (56)
    on left: 23 24 25 26, on right: 17 18 19 20 35 36 37 38
type (57)
    on left: 27 28 29 30 31 32 33, on right: 17 18 19 20 35 36 37 38
    41 87 88
method_declaration (58)
    on left: 34, on right: 16
method_signature (59)
    on left: 35 36 37 38, on right: 34
parameter_list (60)
    on left: 39 40, on right: 35 36 40
parameter (61)
    on left: 41, on right: 39 40
method_body (62)
    on left: 42, on right: 34
statement_list (63)
    on left: 43 44, on right: 42 43 54
statement (64)
    on left: 45 46 47 48 49 50 51 52, on right: 43 44 55 56 57 58
assignment_statement (65)
    on left: 53, on right: 52
block (66)
    on left: 54, on right: 45
if_statement (67)
    on left: 55 56, on right: 46
while_statement (68)
    on left: 57, on right: 47
for_statement (69)
    on left: 58, on right: 48
for_init_statement (70)
    on left: 59 60, on right: 58
for_update_statement (71)
    on left: 61, on right: 58
return_statement (72)
    on left: 62 63, on right: 49
expression (73)
    on left: 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81
    82, on right: 19 20 53 55 56 57 58 63 64 65 66 67 68 69 70 71 72
    73 74 83 84 86 88
argument_list (74)
    on left: 83 84, on right: 72 84
expression_statement (75)
    on left: 85 86, on right: 50 60 61
local_variable_declaration (76)
    on left: 87 88, on right: 51 59


state 0

    0 $accept: . programme $end

    error          shift, and go to state 1
    CLASS_KEYWORD  shift, and go to state 2

    programme   go to state 3
    class_list  go to state 4
    class       go to state 5


state 1

    6 class: error . ID CURLY_OPEN class_body CURLY_CLOSE

    ID  shift, and go to state 6


state 2

    4 class: CLASS_KEYWORD . ID CURLY_OPEN CURLY_CLOSE
    5      | CLASS_KEYWORD . ID CURLY_OPEN class_body CURLY_CLOSE
    7      | CLASS_KEYWORD . error CURLY_OPEN class_body CURLY_CLOSE
    8      | CLASS_KEYWORD . ID error class_body CURLY_CLOSE
    9      | CLASS_KEYWORD . ID CURLY_OPEN class_body error
   10      | CLASS_KEYWORD . ID EXTENDS_KEYWORD ID CURLY_OPEN class_body CURLY_CLOSE
   11      | CLASS_KEYWORD . ID IMPLEMENTS_KEYWORD id_list CURLY_OPEN class_body CURLY_CLOSE
   12      | CLASS_KEYWORD . ID EXTENDS_KEYWORD ID IMPLEMENTS_KEYWORD id_list CURLY_OPEN class_body CURLY_CLOSE

    error  shift, and go to state 7
    ID     shift, and go to state 8


state 3

    0 $accept: programme . $end

    $end  shift, and go to state 9


state 4

    1 programme: class_list .
    2 class_list: class_list . class

    error          shift, and go to state 1
    CLASS_KEYWORD  shift, and go to state 2

    $end  reduce using rule 1 (programme)

    class  go to state 10


state 5

    3 class_list: class .

    $default  reduce using rule 3 (class_list)


state 6

    6 class: error ID . CURLY_OPEN class_body CURLY_CLOSE

    CURLY_OPEN  shift, and go to state 11


state 7

    7 class: CLASS_KEYWORD error . CURLY_OPEN class_body CURLY_CLOSE

    CURLY_OPEN  shift, and go to state 12


state 8

    4 class: CLASS_KEYWORD ID . CURLY_OPEN CURLY_CLOSE
    5      | CLASS_KEYWORD ID . CURLY_OPEN class_body CURLY_CLOSE
    8      | CLASS_KEYWORD ID . error class_body CURLY_CLOSE
    9      | CLASS_KEYWORD ID . CURLY_OPEN class_body error
   10      | CLASS_KEYWORD ID . EXTENDS_KEYWORD ID CURLY_OPEN class_body CURLY_CLOSE
   11      | CLASS_KEYWORD ID . IMPLEMENTS_KEYWORD id_list CURLY_OPEN class_body CURLY_CLOSE
   12      | CLASS_KEYWORD ID . EXTENDS_KEYWORD ID IMPLEMENTS_KEYWORD id_list CURLY_OPEN class_body CURLY_CLOSE

    error               shift, and go to state 13
    CURLY_OPEN          shift, and go to state 14
    EXTENDS_KEYWORD     shift, and go to state 15
    IMPLEMENTS_KEYWORD  shift, and go to state 16


state 9

    0 $accept: programme $end .

    $default  accept


state 10

    2 class_list: class_list class .

    $default  reduce using rule 2 (class_list)


state 11

    6 class: error ID CURLY_OPEN . class_body CURLY_CLOSE

    PUBLIC_KEYWORD     shift, and go to state 17
    PRIVATE_KEYWORD    shift, and go to state 18
    PROTECTED_KEYWORD  shift, and go to state 19

    $default  reduce using rule 26 (access_modifier)

    class_body          go to state 20
    class_member        go to state 21
    field_declaration   go to state 22
    access_modifier     go to state 23
    method_declaration  go to state 24
    method_signature    go to state 25


state 12

    7 class: CLASS_KEYWORD error CURLY_OPEN . class_body CURLY_CLOSE

    PUBLIC_KEYWORD     shift, and go to state 17
    PRIVATE_KEYWORD    shift, and go to state 18
    PROTECTED_KEYWORD  shift, and go to state 19

    $default  reduce using rule 26 (access_modifier)

    class_body          go to state 26
    class_member        go to state 21
    field_declaration   go to state 22
    access_modifier     go to state 23
    method_declaration  go to state 24
    method_signature    go to state 25


state 13

    8 class: CLASS_KEYWORD ID error . class_body CURLY_CLOSE

    PUBLIC_KEYWORD     shift, and go to state 17
    PRIVATE_KEYWORD    shift, and go to state 18
    PROTECTED_KEYWORD  shift, and go to state 19

    $default  reduce using rule 26 (access_modifier)

    class_body          go to state 27
    class_member        go to state 21
    field_declaration   go to state 22
    access_modifier     go to state 23
    method_declaration  go to state 24
    method_signature    go to state 25


state 14

    4 class: CLASS_KEYWORD ID CURLY_OPEN . CURLY_CLOSE
    5      | CLASS_KEYWORD ID CURLY_OPEN . class_body CURLY_CLOSE
    9      | CLASS_KEYWORD ID CURLY_OPEN . class_body error

    CURLY_CLOSE        shift, and go to state 28
    PUBLIC_KEYWORD     shift, and go to state 17
    PRIVATE_KEYWORD    shift, and go to state 18
    PROTECTED_KEYWORD  shift, and go to state 19

    $default  reduce using rule 26 (access_modifier)

    class_body          go to state 29
    class_member        go to state 21
    field_declaration   go to state 22
    access_modifier     go to state 23
    method_declaration  go to state 24
    method_signature    go to state 25


state 15

   10 class: CLASS_KEYWORD ID EXTENDS_KEYWORD . ID CURLY_OPEN class_body CURLY_CLOSE
   12      | CLASS_KEYWORD ID EXTENDS_KEYWORD . ID IMPLEMENTS_KEYWORD id_list CURLY_OPEN class_body CURLY_CLOSE

    ID  shift, and go to state 30


state 16

   11 class: CLASS_KEYWORD ID IMPLEMENTS_KEYWORD . id_list CURLY_OPEN class_body CURLY_CLOSE

    ID  shift, and go to state 31

    id_list  go to state 32


state 17

   23 access_modifier: PUBLIC_KEYWORD .

    $default  reduce using rule 23 (access_modifier)


state 18

   24 access_modifier: PRIVATE_KEYWORD .

    $default  reduce using rule 24 (access_modifier)


state 19

   25 access_modifier: PROTECTED_KEYWORD .

    $default  reduce using rule 25 (access_modifier)


state 20

    6 class: error ID CURLY_OPEN class_body . CURLY_CLOSE
   13 class_body: class_body . class_member

    CURLY_CLOSE        shift, and go to state 33
    PUBLIC_KEYWORD     shift, and go to state 17
    PRIVATE_KEYWORD    shift, and go to state 18
    PROTECTED_KEYWORD  shift, and go to state 19

    $default  reduce using rule 26 (access_modifier)

    class_member        go to state 34
    field_declaration   go to state 22
    access_modifier     go to state 23
    method_declaration  go to state 24
    method_signature    go to state 25


state 21

   14 class_body: class_member .

    $default  reduce using rule 14 (class_body)


state 22

   15 class_member: field_declaration .

    $default  reduce using rule 15 (class_member)


state 23

   17 field_declaration: access_modifier . type id_list SEMICOLON
   18                  | access_modifier . STATIC_KEYWORD type id_list SEMICOLON
   19                  | access_modifier . type ID AFF expression SEMICOLON
   20                  | access_modifier . STATIC_KEYWORD type ID AFF expression SEMICOLON
   35 method_signature: access_modifier . type ID PAREN_OPEN parameter_list PAREN_CLOSE
   36                 | access_modifier . STATIC_KEYWORD type ID PAREN_OPEN parameter_list PAREN_CLOSE
   37                 | access_modifier . type ID PAREN_OPEN PAREN_CLOSE
   38                 | access_modifier . STATIC_KEYWORD type ID PAREN_OPEN PAREN_CLOSE

    ID              shift, and go to state 35
    INT_TYPE        shift, and go to state 36
    FLOAT_TYPE      shift, and go to state 37
    BOOLEAN_TYPE    shift, and go to state 38
    CHAR_TYPE       shift, and go to state 39
    STRING_TYPE     shift, and go to state 40
    VOID_TYPE       shift, and go to state 41
    STATIC_KEYWORD  shift, and go to state 42

    type  go to state 43


state 24

   16 class_member: method_declaration .

    $default  reduce using rule 16 (class_member)


state 25

   34 method_declaration: method_signature . CURLY_OPEN method_body CURLY_CLOSE

    CURLY_OPEN  shift, and go to state 44


state 26

    7 class: CLASS_KEYWORD error CURLY_OPEN class_body . CURLY_CLOSE
   13 class_body: class_body . class_member

    CURLY_CLOSE        shift, and go to state 45
    PUBLIC_KEYWORD     shift, and go to state 17
    PRIVATE_KEYWORD    shift, and go to state 18
    PROTECTED_KEYWORD  shift, and go to state 19

    $default  reduce using rule 26 (access_modifier)

    class_member        go to state 34
    field_declaration   go to state 22
    access_modifier     go to state 23
    method_declaration  go to state 24
    method_signature    go to state 25


state 27

    8 class: CLASS_KEYWORD ID error class_body . CURLY_CLOSE
   13 class_body: class_body . class_member

    CURLY_CLOSE        shift, and go to state 46
    PUBLIC_KEYWORD     shift, and go to state 17
    PRIVATE_KEYWORD    shift, and go to state 18
    PROTECTED_KEYWORD  shift, and go to state 19

    $default  reduce using rule 26 (access_modifier)

    class_member        go to state 34
    field_declaration   go to state 22
    access_modifier     go to state 23
    method_declaration  go to state 24
    method_signature    go to state 25


state 28

    4 class: CLASS_KEYWORD ID CURLY_OPEN CURLY_CLOSE .

    $default  reduce using rule 4 (class)


state 29

    5 class: CLASS_KEYWORD ID CURLY_OPEN class_body . CURLY_CLOSE
    9      | CLASS_KEYWORD ID CURLY_OPEN class_body . error
   13 class_body: class_body . class_member

    error              shift, and go to state 47
    CURLY_CLOSE        shift, and go to state 48
    PUBLIC_KEYWORD     shift, and go to state 17
    PRIVATE_KEYWORD    shift, and go to state 18
    PROTECTED_KEYWORD  shift, and go to state 19

    ID              reduce using rule 26 (access_modifier)
    INT_TYPE        reduce using rule 26 (access_modifier)
    FLOAT_TYPE      reduce using rule 26 (access_modifier)
    BOOLEAN_TYPE    reduce using rule 26 (access_modifier)
    CHAR_TYPE       reduce using rule 26 (access_modifier)
    STRING_TYPE     reduce using rule 26 (access_modifier)
    VOID_TYPE       reduce using rule 26 (access_modifier)
    STATIC_KEYWORD  reduce using rule 26 (access_modifier)

    class_member        go to state 34
    field_declaration   go to state 22
    access_modifier     go to state 23
    method_declaration  go to state 24
    method_signature    go to state 25


state 30

   10 class: CLASS_KEYWORD ID EXTENDS_KEYWORD ID . CURLY_OPEN class_body CURLY_CLOSE
   12      | CLASS_KEYWORD ID EXTENDS_KEYWORD ID . IMPLEMENTS_KEYWORD id_list CURLY_OPEN class_body CURLY_CLOSE

    CURLY_OPEN          shift, and go to state 49
    IMPLEMENTS_KEYWORD  shift, and go to state 50


state 31

   21 id_list: ID .

    $default  reduce using rule 21 (id_list)


state 32

   11 class: CLASS_KEYWORD ID IMPLEMENTS_KEYWORD id_list . CURLY_OPEN class_body CURLY_CLOSE
   22 id_list: id_list . COMMA ID

    CURLY_OPEN  shift, and go to state 51
    COMMA       shift, and go to state 52


state 33

    6 class: error ID CURLY_OPEN class_body CURLY_CLOSE .

    $default  reduce using rule 6 (class)


state 34

   13 class_body: class_body class_member .

    $default  reduce using rule 13 (class_body)


state 35

   33 type: ID .

    $default  reduce using rule 33 (type)


state 36

   27 type: INT_TYPE .

    $default  reduce using rule 27 (type)


state 37

   28 type: FLOAT_TYPE .

    $default  reduce using rule 28 (type)


state 38

   29 type: BOOLEAN_TYPE .

    $default  reduce using rule 29 (type)


state 39

   30 type: CHAR_TYPE .

    $default  reduce using rule 30 (type)


state 40

   31 type: STRING_TYPE .

    $default  reduce using rule 31 (type)


state 41

   32 type: VOID_TYPE .

    $default  reduce using rule 32 (type)


state 42

   18 field_declaration: access_modifier STATIC_KEYWORD . type id_list SEMICOLON
   20                  | access_modifier STATIC_KEYWORD . type ID AFF expression SEMICOLON
   36 method_signature: access_modifier STATIC_KEYWORD . type ID PAREN_OPEN parameter_list PAREN_CLOSE
   38                 | access_modifier STATIC_KEYWORD . type ID PAREN_OPEN PAREN_CLOSE

    ID            shift, and go to state 35
    INT_TYPE      shift, and go to state 36
    FLOAT_TYPE    shift, and go to state 37
    BOOLEAN_TYPE  shift, and go to state 38
    CHAR_TYPE     shift, and go to state 39
    STRING_TYPE   shift, and go to state 40
    VOID_TYPE     shift, and go to state 41

    type  go to state 53


state 43

   17 field_declaration: access_modifier type . id_list SEMICOLON
   19                  | access_modifier type . ID AFF expression SEMICOLON
   35 method_signature: access_modifier type . ID PAREN_OPEN parameter_list PAREN_CLOSE
   37                 | access_modifier type . ID PAREN_OPEN PAREN_CLOSE

    ID  shift, and go to state 54

    id_list  go to state 55


state 44

   34 method_declaration: method_signature CURLY_OPEN . method_body CURLY_CLOSE

    error            shift, and go to state 56
    ID               shift, and go to state 57
    CURLY_OPEN       shift, and go to state 58
    PAREN_OPEN       shift, and go to state 59
    SEMICOLON        shift, and go to state 60
    INT_LITERAL      shift, and go to state 61
    FLOAT_LITERAL    shift, and go to state 62
    BOOLEAN_LITERAL  shift, and go to state 63
    CHAR_LITERAL     shift, and go to state 64
    STRING_LITERAL   shift, and go to state 65
    INT_TYPE         shift, and go to state 36
    FLOAT_TYPE       shift, and go to state 37
    BOOLEAN_TYPE     shift, and go to state 38
    CHAR_TYPE        shift, and go to state 39
    STRING_TYPE      shift, and go to state 40
    VOID_TYPE        shift, and go to state 41
    THIS_KEYWORD     shift, and go to state 66
    IF_KEYWORD       shift, and go to state 67
    WHILE_KEYWORD    shift, and go to state 68
    FOR_KEYWORD      shift, and go to state 69
    RETURN_KEYWORD   shift, and go to state 70

    type                        go to state 71
    method_body                 go to state 72
    statement_list              go to state 73
    statement                   go to state 74
    assignment_statement        go to state 75
    block                       go to state 76
    if_statement                go to state 77
    while_statement             go to state 78
    for_statement               go to state 79
    return_statement            go to state 80
    expression                  go to state 81
    expression_statement        go to state 82
    local_variable_declaration  go to state 83


state 45

    7 class: CLASS_KEYWORD error CURLY_OPEN class_body CURLY_CLOSE .

    $default  reduce using rule 7 (class)


state 46

    8 class: CLASS_KEYWORD ID error class_body CURLY_CLOSE .

    $default  reduce using rule 8 (class)


state 47

    9 class: CLASS_KEYWORD ID CURLY_OPEN class_body error .

    $default  reduce using rule 9 (class)


state 48

    5 class: CLASS_KEYWORD ID CURLY_OPEN class_body CURLY_CLOSE .

    $default  reduce using rule 5 (class)


state 49

   10 class: CLASS_KEYWORD ID EXTENDS_KEYWORD ID CURLY_OPEN . class_body CURLY_CLOSE

    PUBLIC_KEYWORD     shift, and go to state 17
    PRIVATE_KEYWORD    shift, and go to state 18
    PROTECTED_KEYWORD  shift, and go to state 19

    $default  reduce using rule 26 (access_modifier)

    class_body          go to state 84
    class_member        go to state 21
    field_declaration   go to state 22
    access_modifier     go to state 23
    method_declaration  go to state 24
    method_signature    go to state 25


state 50

   12 class: CLASS_KEYWORD ID EXTENDS_KEYWORD ID IMPLEMENTS_KEYWORD . id_list CURLY_OPEN class_body CURLY_CLOSE

    ID  shift, and go to state 31

    id_list  go to state 85


state 51

   11 class: CLASS_KEYWORD ID IMPLEMENTS_KEYWORD id_list CURLY_OPEN . class_body CURLY_CLOSE

    PUBLIC_KEYWORD     shift, and go to state 17
    PRIVATE_KEYWORD    shift, and go to state 18
    PROTECTED_KEYWORD  shift, and go to state 19

    $default  reduce using rule 26 (access_modifier)

    class_body          go to state 86
    class_member        go to state 21
    field_declaration   go to state 22
    access_modifier     go to state 23
    method_declaration  go to state 24
    method_signature    go to state 25


state 52

   22 id_list: id_list COMMA . ID

    ID  shift, and go to state 87


state 53

   18 field_declaration: access_modifier STATIC_KEYWORD type . id_list SEMICOLON
   20                  | access_modifier STATIC_KEYWORD type . ID AFF expression SEMICOLON
   36 method_signature: access_modifier STATIC_KEYWORD type . ID PAREN_OPEN parameter_list PAREN_CLOSE
   38                 | access_modifier STATIC_KEYWORD type . ID PAREN_OPEN PAREN_CLOSE

    ID  shift, and go to state 88

    id_list  go to state 89


state 54

   19 field_declaration: access_modifier type ID . AFF expression SEMICOLON
   21 id_list: ID .
   35 method_signature: access_modifier type ID . PAREN_OPEN parameter_list PAREN_CLOSE
   37                 | access_modifier type ID . PAREN_OPEN PAREN_CLOSE

    AFF         shift, and go to state 90
    PAREN_OPEN  shift, and go to state 91

    $default  reduce using rule 21 (id_list)


state 55

   17 field_declaration: access_modifier type id_list . SEMICOLON
   22 id_list: id_list . COMMA ID

    SEMICOLON  shift, and go to state 92
    COMMA      shift, and go to state 52


state 56

   82 expression: error .

    $default  reduce using rule 82 (expression)


state 57

   33 type: ID .
   53 assignment_statement: ID . AFF expression SEMICOLON
   70 expression: ID . DOT expression
   81           | ID .

    AFF  shift, and go to state 93
    DOT  shift, and go to state 94

    ID        reduce using rule 33 (type)
    DOT       [reduce using rule 81 (expression)]
    $default  reduce using rule 81 (expression)


state 58

   54 block: CURLY_OPEN . statement_list CURLY_CLOSE
